visualization_site.css
	body {
		text-align: center;
		font-family: Courier;
	}
	
	h1 {
		position: relative;
		font-size: 45px;
	}

	h2 {
		position: relative;
		font-size: 25px;
		display: inline-block;
	}
	h3 {
		position: relative;
		font-size: 15px;
		font-weight: normal;
	}
	.button {
		-moz-box-shadow:inset 0px 0px 0px 0px #54a3f7;
		-webkit-box-shadow:inset 0px 0px 0px 0px #54a3f7;
		box-shadow:inset 0px 0px 0px 0px #54a3f7;
		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #007dc1), color-stop(1, #0061a7));
		background:-moz-linear-gradient(top, #007dc1 5%, #0061a7 100%);
		background:-webkit-linear-gradient(top, #007dc1 5%, #0061a7 100%);
		background:-o-linear-gradient(top, #007dc1 5%, #0061a7 100%);
		background:-ms-linear-gradient(top, #007dc1 5%, #0061a7 100%);
		background:linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#007dc1', endColorstr='#0061a7',GradientType=0);
		background-color:#007dc1;
		-moz-border-radius:9px;
		-webkit-border-radius:9px;
		border-radius:9px;
		border:1px solid #124d77;
		display:inline-block;
		cursor:pointer;
		color:#ffffff;
		font-family:Courier New;
		font-size:20px;
		padding:11px 31px;
		text-decoration:none;
		text-align: center;
		text-shadow:0px 1px 0px #154682;
	}
	.button:hover {
		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0061a7), color-stop(1, #007dc1));
		background:-moz-linear-gradient(top, #0061a7 5%, #007dc1 100%);
		background:-webkit-linear-gradient(top, #0061a7 5%, #007dc1 100%);
		background:-o-linear-gradient(top, #0061a7 5%, #007dc1 100%);
		background:-ms-linear-gradient(top, #0061a7 5%, #007dc1 100%);
		background:linear-gradient(to bottom, #0061a7 5%, #007dc1 100%);
		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0061a7', endColorstr='#007dc1',GradientType=0);
		background-color:#0061a7;
	}
	.button:active {
		position:relative;
		top:1px;
	} 

	.tableOptions {
		-moz-box-shadow:inset 0px 0px 0px 0px #54a3f7;
		-webkit-box-shadow:inset 0px 0px 0px 0px #54a3f7;
		box-shadow:inset 0px 0px 0px 0px #54a3f7;
		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #007dc1), color-stop(1, #0061a7));
		background:-moz-linear-gradient(top, #007dc1 5%, #0061a7 100%);
		background:-webkit-linear-gradient(top, #007dc1 5%, #0061a7 100%);
		background:-o-linear-gradient(top, #007dc1 5%, #0061a7 100%);
		background:-ms-linear-gradient(top, #007dc1 5%, #0061a7 100%);
		background:linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#007dc1', endColorstr='#0061a7',GradientType=0);
		background-color:#007dc1;
		-moz-border-radius:9px;
		-webkit-border-radius:9px;
		border-radius:9px;
		border:1px solid #124d77;
		display:inline-block;
		cursor:pointer;
		color:#ffffff;
		font-family:Courier New;
		font-size:20px;
		padding:11px 31px;
		text-decoration:none;
		text-align: center;
		text-shadow:0px 1px 0px #154682;
	}
	.tableOptions:hover {
		background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0061a7), color-stop(1, #007dc1));
		background:-moz-linear-gradient(top, #0061a7 5%, #007dc1 100%);
		background:-webkit-linear-gradient(top, #0061a7 5%, #007dc1 100%);
		background:-o-linear-gradient(top, #0061a7 5%, #007dc1 100%);
		background:-ms-linear-gradient(top, #0061a7 5%, #007dc1 100%);
		background:linear-gradient(to bottom, #0061a7 5%, #007dc1 100%);
		filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0061a7', endColorstr='#007dc1',GradientType=0);
		background-color:#0061a7;
	}
	.tableOptions:active {
		position:relative;
		top:1px;
	}

	/*Break Lines*/
	.short_line {
		width: 70%;
		height: 4px;
		margin-left: auto;
		margin-right: auto;
		background-color:#666;
		border: 0 none;
		margin-top: 10px;
		margin-bottom:10px;	
	}
	.long_line {
		width: 85%;
		height: 4px;
		margin-left: auto;
		margin-right: auto;
		background-color:#666;
		border: 0 none;
		margin-top: 10px;
		margin-bottom:10px;	
	}

	/*Author Pictures*/
	.row {
		display: flex;
	}

	.column {
		flex: 33.33%;
		padding: 5px;
	}
	.picture_container {
		position: relative;
		width: 500px;
		height: 300px;
		overflow: hidden;
		object-fit:scale-down;
	}
	/*.image_up {
		display: block;
		width: 100%;
		height: auto;
		}*/
		.image {
			display: block;
			width: auto;
			height: auto;
		}
		.picture_overlay_left {
			position: absolute;
			bottom: 0;
			left: 0;
			right: 0;
			background-color: #008CBA;
			overflow: hidden;
			width: 0;
			height: 100%;
			transition: 1s ease;
		}
		.picture_overlay_up {
			position: absolute;
			bottom: 0;
			left: 0;
			right: 0;
			background-color: #008CBA;
			overflow: hidden;
			width: 100%;
			height: 0;
			transition: 1s ease;
		}
		.picture_overlay_right{
			position: absolute;
			bottom: 0;
			left: 100%;
			right: 0;
			background-color: #008CBA;
			overflow: hidden;
			width: 0;
			height: 100%;
			transition: 1s ease;
		}
		.picture_container:hover .picture_overlay_left {
			width: 100%;
		}
		.picture_container:hover .picture_overlay_up {
			height: 100%;
		}
		.picture_container:hover .picture_overlay_right {
			width: 100%;
			left: 0;
		}
		.picture_text {
			white-space: nowrap; 
			color: white;
			font-size: 20px;
			position: absolute;
			overflow: hidden;
			top: 50%;
			left: 50%;
			transform: translate(-50%, -50%);
			-ms-transform: translate(-50%, -50%);
		}

		/*Search Bar*/
		* {
			box-sizing: border-box;
		}
		form.example input[type=text] {
			padding: 10px;
			font-size: 17px;
			border: 1px solid grey;
			float: middle;
			width: 70%;
			background: #f1f1f1;
		}
		form.example button {
			float: relative;
			width: 25%;
			padding: 10px;
			background: #2196F3;
			color: white;
			font-size: 17px;
			border: 1px solid grey;
			border-left: none;
			cursor: pointer;
		}
		form.example button:hover {
			background: #0b7dda;
		}
		form.example::after {
			content: "";
			clear: both;
			display: table;
		}
		/*Navigation Bar for top of page*/
		#navbar {
			overflow: hidden;
			background-color: #333;
		}
		#navbar a {
			float: left;
			display: block;
			color: #f2f2f2;
			text-align: center;
			padding: 14px;
			text-decoration: none;
		}
		.content {
			padding: 16px;
		}
		.sticky {
			z-index: 1;
			position: fixed;
			top: 0;
			width: 100%;
		}
		.sticky + .content {
			padding-top: 60px;
		}
		/* Change the color of links on hover */
		#navbar a:hover {
			background-color: #ddd;
			color: black;
		}
	}

